fix relative positon on movies covered items

--- a/src/component/MoviesCovered/MoviesCovered.scss
+++ b/src/component/MoviesCovered/MoviesCovered.scss
@@ -14,7 +14,7 @@
     .zg-movie-title {
       margin: auto;
       position: relative;
-      top: 20%;
+      top: 15%;
       width: 80%;
       height: 50%;
     }
